Add Print for Number of CPUs

--- a/[Connect Four] Self Play.ipynb
+++ b/[Connect Four] Self Play.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "V28",
-      "authorship_tag": "ABX9TyNuossC8vnO3Zqv1C8fq8DW",
+      "authorship_tag": "ABX9TyNWwldCrRkMH5XT3OBtwyFr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,6 +54,9 @@
       "source": [
         "import functools\n",
         "import numpy as np\n",
+        "import multiprocessing as mp\n",
+        "import ray\n",
+        "from ray import tune\n",
         "from ray.air.constants import TRAINING_ITERATION\n",
         "from ray.rllib.core.rl_module.default_model_config import DefaultModelConfig\n",
         "from ray.rllib.core.rl_module.multi_rl_module import MultiRLModuleSpec\n",
@@ -85,7 +88,7 @@
       "metadata": {
         "id": "lJUAoPZeiGag"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -110,13 +113,24 @@
     {
       "cell_type": "code",
       "source": [
+        "print(f\"Number or CPUs Available: {mp.cpu_count()}\")"
+      ],
+      "metadata": {
+        "id": "hcLCpu7_RH0b"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "open_spiel = try_import_open_spiel(error=True)\n",
         "pyspiel = try_import_pyspiel(error=True)"
       ],
       "metadata": {
         "id": "HkHVtp4zi_fQ"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -160,13 +174,14 @@
         "        self.restore = None\n",
         "        self.num_samples = 1\n",
         "        self.max_concurrent_trials = 1\n",
+        "        #self.resources={\"TPU\": 2}\n",
         "\n",
         "config_args = Config()"
       ],
       "metadata": {
         "id": "CAdfXqWtjRHO"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -212,7 +227,7 @@
       "metadata": {
         "id": "UADMYATei81H"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
