Update notebook with fixed version of ray/rrlib

--- a/[Connect Four] Self Play.ipynb
+++ b/[Connect Four] Self Play.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "V28",
-      "authorship_tag": "ABX9TyNWwldCrRkMH5XT3OBtwyFr",
+      "authorship_tag": "ABX9TyOpY1Smoe7ozBF801eokgbQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,18 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install ray[rllib] gputil open_spiel"
+        "!pip install https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-3.0.0.dev0-cp310-cp310-manylinux2014_x86_64.whl"
+      ],
+      "metadata": {
+        "id": "TpZLZdJK-SAB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install gputil open_spiel gymnasium"
       ],
       "metadata": {
         "id": "_mfyOqFelr3N"
@@ -88,7 +99,7 @@
       "metadata": {
         "id": "lJUAoPZeiGag"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,226 +141,164 @@
       "metadata": {
         "id": "HkHVtp4zi_fQ"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "class Config:\n",
-        "    def __init__(self, **kwargs):\n",
-        "        self.__dict__.update(kwargs)\n",
+        "class Args:\n",
+        "    def __init__(self):\n",
         "        self.env = \"connect_four\"\n",
-        "        self.framework = \"torch\"\n",
-        "        self.algo = \"PPO\"\n",
-        "        self.num_gpus = 1\n",
-        "        self.num_env_runners = 1\n",
-        "        self.enable_new_api_stack = True\n",
-        "        self.min_league_size = 1\n",
+        "        self.checkpoint_freq = 1\n",
+        "        self.checkpoint_at_end = True\n",
         "        self.win_rate_threshold = 0.95\n",
+        "        self.min_league_size = 3\n",
         "        self.num_episodes_human_play = 10\n",
         "        self.from_checkpoint = None\n",
+        "        # Add other necessary attributes from parser arguments\n",
+        "        self.algo = 'PPO' # Assuming PPO is the default algorithm\n",
+        "        self.num_env_runners = 2\n",
+        "        self.enable_new_api_stack = True\n",
+        "        self.stop_timesteps = 2000000\n",
         "        self.stop_iters = 100\n",
-        "        self.stop_timesteps = 1000000\n",
         "        self.as_release_test = False\n",
-        "        self.num_cpus = 1\n",
+        "        self.num_cpus = 10\n",
         "        self.local_mode = False\n",
-        "        self.evaluation_interval = 10\n",
-        "        self.evaluation_num_episodes = 10\n",
-        "        self.evaluation_num_env_runners = 1\n",
-        "        self.evaluation_duration = 10\n",
-        "        self.evaluation_duration_unit = 10\n",
-        "        self.evaluation_parallel_to_training = False\n",
-        "        self.evaluation_config = {}\n",
-        "        self.evaluation_num_workers = 1\n",
-        "        self.log_level = \"INFO\"\n",
-        "        self.output = \"ray_results\"\n",
+        "        self.framework = 'torch'\n",
+        "        self.num_gpus = 0\n",
+        "        self.num_gpus_per_learner = 1\n",
+        "        self.num_learners = 1\n",
+        "        self.evaluation_interval = 0\n",
+        "        self.log_level = None\n",
+        "        self.output = None\n",
         "        self.no_tune = False\n",
-        "        self.num_agents = 2\n",
-        "        self.num_iterations = 100\n",
-        "        self.verbose = False\n",
-        "        self.seed = 42\n",
-        "        self.checkpoint_freq = 10\n",
-        "        self.checkpoint_at_end = True\n",
-        "        self.restore = None\n",
+        "        self.num_agents = 0\n",
+        "        self.verbose = 2\n",
         "        self.num_samples = 1\n",
-        "        self.max_concurrent_trials = 1\n",
-        "        #self.resources={\"TPU\": 2}\n",
+        "        self.max_concurrent_trials = None\n",
+        "        self.as_test = False\n",
+        "        self.num_envs_per_env_runner = 1 if args.enable_new_api_stack else 5\n",
         "\n",
-        "config_args = Config()"
+        "args = Args()"
       ],
       "metadata": {
-        "id": "CAdfXqWtjRHO"
+        "id": "n14z0JJF-eom"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# parser = add_rllib_example_script_args(default_timesteps=2000000)\n",
-        "# parser.set_defaults(env=\"connect_four\")\n",
-        "# parser.add_argument(\n",
-        "#     \"--win-rate-threshold\",\n",
-        "#     type=float,\n",
-        "#     default=0.95,\n",
-        "#     help=\"Win-rate at which we setup another opponent by freezing the \"\n",
-        "#     \"current main policy and playing against a uniform distribution \"\n",
-        "#     \"of previously frozen 'main's from here on.\",\n",
-        "# )\n",
-        "# parser.add_argument(\n",
-        "#     \"--min-league-size\",\n",
-        "#     type=float,\n",
-        "#     default=3,\n",
-        "#     help=\"Minimum number of policies/RLModules to consider the test passed. \"\n",
-        "#     \"The initial league size is 2: `main` and `random`. \"\n",
-        "#     \"`--min-league-size=3` thus means that one new policy/RLModule has been \"\n",
-        "#     \"added so far (b/c the `main` one has reached the `--win-rate-threshold \"\n",
-        "#     \"against the `random` Policy/RLModule).\",\n",
-        "# )\n",
-        "# parser.add_argument(\n",
-        "#     \"--num-episodes-human-play\",\n",
-        "#     type=int,\n",
-        "#     default=10,\n",
-        "#     help=\"How many episodes to play against the user on the command \"\n",
-        "#     \"line after training has finished.\",\n",
-        "# )\n",
-        "# parser.add_argument(\n",
-        "#     \"--from-checkpoint\",\n",
-        "#     type=str,\n",
-        "#     default=None,\n",
-        "#     help=\"Full path to a checkpoint file for restoring a previously saved \"\n",
-        "#     \"Algorithm state.\",\n",
-        "# )\n",
-        "\n",
-        "# args = parser.parse_args()"
-      ],
-      "metadata": {
-        "id": "UADMYATei81H"
-      },
-      "execution_count": 7,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "register_env(\"open_spiel_env\", lambda _: OpenSpielEnv(pyspiel.load_game(config_args.env)))\n",
-        "\n",
         "def agent_to_module_mapping_fn(agent_id, episode, **kwargs):\n",
-        "  # agent_id = [0|1] -> module depends on episode ID\n",
-        "  # This way, we make sure that both modules sometimes play agent0\n",
-        "  # (start player) and sometimes agent1 (player to move 2nd).\n",
-        "  return \"main\" if hash(episode.id_) % 2 == agent_id else \"random\"\n",
+        "        # agent_id = [0|1] -> module depends on episode ID\n",
+        "        # This way, we make sure that both modules sometimes play agent0\n",
+        "        # (start player) and sometimes agent1 (player to move 2nd).\n",
+        "        return \"main\" if hash(episode.id_) % 2 == agent_id else \"random\"\n",
         "\n",
         "def policy_mapping_fn(agent_id, episode, worker, **kwargs):\n",
-        "  return \"main\" if episode.episode_id % 2 == agent_id else \"random\"\n",
+        "    return \"main\" if episode.episode_id % 2 == agent_id else \"random\"\n",
         "\n",
         "config = (\n",
-        "get_trainable_cls(config_args.algo)\n",
-        ".get_default_config()\n",
-        ".api_stack(\n",
-        "    enable_rl_module_and_learner=config_args.enable_new_api_stack,\n",
-        "    enable_env_runner_and_connector_v2=config_args.enable_new_api_stack,\n",
-        ")\n",
-        ".environment(\"open_spiel_env\")\n",
-        ".framework(config_args.framework)\n",
-        "# Set up the main piece in this experiment: The league-bases self-play\n",
-        "# callback, which controls adding new policies/Modules to the league and\n",
-        "# properly matching the different policies in the league with each other.\n",
-        ".callbacks(\n",
-        "    functools.partial(\n",
-        "        (\n",
-        "            SelfPlayCallback\n",
-        "            if config_args.enable_new_api_stack\n",
-        "            else SelfPlayCallbackOldAPIStack\n",
-        "        ),\n",
-        "        win_rate_threshold=config_args.win_rate_threshold,\n",
+        "    get_trainable_cls(args.algo)\n",
+        "    .get_default_config()\n",
+        "    .environment(\"open_spiel_env\")\n",
+        "    # Set up the main piece in this experiment: The league-bases self-play\n",
+        "    # callback, which controls adding new policies/Modules to the league and\n",
+        "    # properly matching the different policies in the league with each other.\n",
+        "    .callbacks(\n",
+        "        functools.partial(\n",
+        "            (\n",
+        "                SelfPlayCallback\n",
+        "                if args.enable_new_api_stack\n",
+        "                else SelfPlayCallbackOldAPIStack\n",
+        "            ),\n",
+        "            win_rate_threshold=args.win_rate_threshold,\n",
+        "        )\n",
         "    )\n",
-        ")\n",
-        ".env_runners(\n",
-        "    num_env_runners=(config_args.num_env_runners or 2),\n",
-        "    num_envs_per_env_runner=1 if config_args.enable_new_api_stack else 5,\n",
-        ")\n",
-        ".learners(\n",
-        "    num_learners=config_args.num_gpus,\n",
-        "    num_gpus_per_learner=1 if config_args.num_gpus else 0,\n",
-        ")\n",
-        ".resources(\n",
-        "    num_cpus_for_main_process=1,\n",
-        ")\n",
-        ".multi_agent(\n",
-        "    # Initial policy map: Random and default algo one. This will be expanded\n",
-        "    # to more policy snapshots taken from \"main\" against which \"main\"\n",
-        "    # will then play (instead of \"random\"). This is done in the\n",
-        "    # custom callback defined above (`SelfPlayCallback`).\n",
-        "    policies=(\n",
-        "        {\n",
-        "            # Our main policy, we'd like to optimize.\n",
-        "            \"main\": PolicySpec(),\n",
-        "            # An initial random opponent to play against.\n",
-        "            \"random\": PolicySpec(policy_class=RandomPolicy),\n",
-        "        }\n",
-        "        if not config_args.enable_new_api_stack\n",
-        "        else {\"main\", \"random\"}\n",
-        "    ),\n",
-        "    # Assign agent 0 and 1 randomly to the \"main\" policy or\n",
-        "    # to the opponent (\"random\" at first). Make sure (via episode_id)\n",
-        "    # that \"main\" always plays against \"random\" (and not against\n",
-        "    # another \"main\").\n",
-        "    policy_mapping_fn=(\n",
-        "        agent_to_module_mapping_fn\n",
-        "        if config_args.enable_new_api_stack\n",
-        "        else policy_mapping_fn\n",
-        "    ),\n",
-        "    # Always just train the \"main\" policy.\n",
-        "    policies_to_train=[\"main\"],\n",
-        ")\n",
-        ".rl_module(\n",
-        "    model_config=DefaultModelConfig(fcnet_hiddens=[512, 512]),\n",
-        "    rl_module_spec=MultiRLModuleSpec(\n",
-        "        rl_module_specs={\n",
-        "            \"main\": RLModuleSpec(),\n",
-        "            \"random\": RLModuleSpec(module_class=RandomRLModule),\n",
-        "        }\n",
-        "    ),\n",
-        ")\n",
+        "    .env_runners(\n",
+        "        num_env_runners=(args.num_env_runners or 2),\n",
+        "        num_envs_per_env_runner=1 if args.enable_new_api_stack else 5,\n",
+        "    )\n",
+        "    .multi_agent(\n",
+        "        # Initial policy map: Random and default algo one. This will be expanded\n",
+        "        # to more policy snapshots taken from \"main\" against which \"main\"\n",
+        "        # will then play (instead of \"random\"). This is done in the\n",
+        "        # custom callback defined above (`SelfPlayCallback`).\n",
+        "        policies=(\n",
+        "            {\n",
+        "                # Our main policy, we'd like to optimize.\n",
+        "                \"main\": PolicySpec(),\n",
+        "                # An initial random opponent to play against.\n",
+        "                \"random\": PolicySpec(policy_class=RandomPolicy),\n",
+        "            }\n",
+        "            if not args.enable_new_api_stack\n",
+        "            else {\"main\", \"random\"}\n",
+        "        ),\n",
+        "        # Assign agent 0 and 1 randomly to the \"main\" policy or\n",
+        "        # to the opponent (\"random\" at first). Make sure (via episode_id)\n",
+        "        # that \"main\" always plays against \"random\" (and not against\n",
+        "        # another \"main\").\n",
+        "        policy_mapping_fn=(\n",
+        "            agent_to_module_mapping_fn\n",
+        "            if args.enable_new_api_stack\n",
+        "            else policy_mapping_fn\n",
+        "        ),\n",
+        "        # Always just train the \"main\" policy.\n",
+        "        policies_to_train=[\"main\"],\n",
+        "    )\n",
+        "    .rl_module(\n",
+        "        model_config=DefaultModelConfig(fcnet_hiddens=[512, 512]),\n",
+        "        rl_module_spec=MultiRLModuleSpec(\n",
+        "            rl_module_specs={\n",
+        "                \"main\": RLModuleSpec(),\n",
+        "                \"random\": RLModuleSpec(module_class=RandomRLModule),\n",
+        "            }\n",
+        "        ),\n",
+        "    )\n",
         ")\n",
         "\n",
         "# Only for PPO, change the `num_epochs` setting.\n",
-        "if config_args.algo == \"PPO\":\n",
-        "  config.training(num_epochs=20)\n",
+        "if args.algo == \"PPO\":\n",
+        "    config.training(num_epochs=20)\n",
         "\n",
         "stop = {\n",
-        "  NUM_ENV_STEPS_SAMPLED_LIFETIME: config_args.stop_timesteps,\n",
-        "  TRAINING_ITERATION: config_args.stop_iters,\n",
-        "  \"league_size\": config_args.min_league_size,\n",
+        "    NUM_ENV_STEPS_SAMPLED_LIFETIME: args.stop_timesteps,\n",
+        "    TRAINING_ITERATION: args.stop_iters,\n",
+        "    \"league_size\": args.min_league_size,\n",
         "}\n",
         "\n",
         "# Train the \"main\" policy to play really well using self-play.\n",
         "results = None\n",
-        "if not config_args.from_checkpoint:\n",
-        "    results = run_rllib_example_script_experiment(config, config_args, stop=stop)\n",
+        "if not args.from_checkpoint:\n",
+        "    results = run_rllib_example_script_experiment(\n",
+        "        config, args, stop=stop\n",
+        "    )\n",
         "\n",
         "# Restore trained Algorithm (set to non-explore behavior) and play against\n",
         "# human on command line.\n",
-        "if config_args.num_episodes_human_play > 0:\n",
+        "if args.num_episodes_human_play > 0:\n",
         "    num_episodes = 0\n",
         "    config.explore = False\n",
         "    algo = config.build()\n",
-        "    if config_args.from_checkpoint:\n",
-        "        algo.restore(config_args.from_checkpoint)\n",
+        "    if args.from_checkpoint:\n",
+        "        algo.restore(args.from_checkpoint)\n",
         "    else:\n",
         "        checkpoint = results.get_best_result().checkpoint\n",
         "        if not checkpoint:\n",
         "            raise ValueError(\"No last checkpoint found in results!\")\n",
         "        algo.restore(checkpoint)\n",
         "\n",
+        "    if args.enable_new_api_stack:\n",
+        "        rl_module = algo.get_module(\"main\")\n",
+        "\n",
         "    # Play from the command line against the trained agent\n",
         "    # in an actual (non-RLlib-wrapped) open-spiel env.\n",
         "    human_player = 1\n",
-        "    env = Environment(config_args.env)\n",
+        "    env = Environment(args.env)\n",
         "\n",
-        "    while num_episodes < config_args.num_episodes_human_play:\n",
+        "    while num_episodes < args.num_episodes_human_play:\n",
         "        print(\"You play as {}\".format(\"o\" if human_player else \"x\"))\n",
         "        time_step = env.reset()\n",
         "        while not time_step.last():\n",
@@ -358,7 +307,14 @@
         "                action = ask_user_for_action(time_step)\n",
         "            else:\n",
         "                obs = np.array(time_step.observations[\"info_state\"][player_id])\n",
-        "                action = algo.compute_single_action(obs, policy_id=\"main\")\n",
+        "                if args.enable_new_api_stack:\n",
+        "                    action = np.argmax(\n",
+        "                        rl_module.forward_inference(\n",
+        "                            {\"obs\": torch.from_numpy(obs).unsqueeze(0).float()}\n",
+        "                        )[\"action_dist_inputs\"][0].numpy()\n",
+        "                    )\n",
+        "                else:\n",
+        "                    action = algo.compute_single_action(obs, policy_id=\"main\")\n",
         "                # In case computer chooses an invalid action, pick a\n",
         "                # random one.\n",
         "                legal = time_step.observations[\"legal_actions\"][player_id]\n",
@@ -385,15 +341,6 @@
       ],
       "metadata": {
         "id": "A5y6PBpEmTCW"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Yaq0oAz0ml58"
       },
       "execution_count": null,
       "outputs": []
